2005-08-05  Dominik Vogt  <dominik.vogt@gmx.de>

	* FvwmBanner/fvwm-logo-current.xbm:
	* FvwmBanner/fvwm-logo-current.xpm:
	use the new logo

2005-08-04  Dominik Vogt  <dominik.vogt@gmx.de>

	* FvwmScript/FvwmScript.1.in:
	corrected a typo

2005-07-28  Dominik Vogt  <dominik.vogt@gmx.de>

	* FvwmProxy/FvwmProxy.c (myXErrorHandler;:
	(myXIOErrorHandler):
	* FvwmGtk/windowlist.c (compare_desk):
	* FvwmConsole/FvwmConsole.c (server):
	64-bit fixes

2005-07-20  Mikhael Goikhman  <migo@homemail.com>

	* FvwmPerl/FvwmPerl.in:
	* FvwmPerl/FvwmPerl.1:
	support window context in "preprocess" action

2005-07-18  Dominik Vogt  <dominik.vogt@gmx.de>

	* FvwmBacker/FvwmBacker.c (SetRootAtoms):
	(DeleteRootAtoms):
	* FvwmWinList/FvwmWinList.c (SetMwmHints):
	* FvwmWinList/FvwmWinList.c (PropMotifWmHints):
	* FvwmTaskBar/FvwmTaskBar.c (SetMwmHints):
	* FvwmTaskBar/FvwmTaskBar.h (PropMotifWmHints):
	64-bit fixes

2005-07-10  Dominik Vogt  <dominik.vogt@gmx.de>

	* FvwmIconMan/xmanager.c (draw_relief):
	don't remove the button relief if a button ever gets too small for the
	relief; instead, shrink the relief for the moment, but remember the
	original value

2005-06-28  Viktor Griph  <griph@dd.chalmers.se>

	* FvwmDebug/FvwmDebug.in:
	register handler for extended messages

2005-06-07  Dan Espen  <dane@mk.telcordia.com>

	* FvwmScript/FvwmScript.1.in (following): Clarify description of
	Do block.

2005-06-02  Dan Espen  <dane@mk.telcordia.com>

	* FvwmAuto/FvwmAuto.c (main): Spelling fix in comment
	contition -> condition.

2005-03-22  Dan Espen  <dane@mk.telcordia.com>

	* FvwmProxy/FvwmProxy.1.in: Use new variable syntax.

2005-03-17  Dan Espen  <dane@mk.telcordia.com>

	* FvwmProxy/FvwmProxy.1.in: Fix .IP syntax.

2005-02-26  Scott Smedley  <scottie7@tpg.com.au>

	* modules/FvwmButtons/FvwmButtons.1.in:
	* modules/FvwmButtons/FvwmButtons.c:
	* modules/FvwmButtons/FvwmButtons.h:
	* modules/FvwmButtons/button.c:
	* modules/FvwmButtons/button.h:
	* modules/FvwmButtons/draw.c: