@@ -48,6 +48,10 @@ Specifies the color theme for unselected proxy windows.
 .IP "*FvwmProxy: SelectColorset \fIn\fP"
 Specifies the color theme for the selected proxy window.
 
+.IP "*FvwmProxy: IconifiedColorset \fIn\fP"
+Specifies the color theme for proxy windows of iconified windows.
+This is only meaningful in conjuction with the ProxyIconified option on.
+
 .IP "*FvwmProxy: Font \fIfont\fP"
 Specifies the font used for all proxy window text.
 
@@ -74,6 +78,11 @@ The default is false.
 If true, moving a proxy window will move the window it represents.
 Currently, the proxied window doesn't recognize snap effects during
 this operation.
+
+.IP "*FvwmProxy: ProxyIconified \fIbool\fP"
+If true, continue to proxy windows when they are iconified.
+In addition, consider adding click actions that Iconify on and off,
+such as on the middlemouse button.
 
 .IP "*FvwmProxy: Action \fImouseaction\fP \fIresponse\fP"
 Tells FvwmProxy to do the specified \fIresponse\fP when the given
@@ -174,26 +183,36 @@ The following are excerpts from a .fvwm2rc file which describe
 FvwmProxy initialization commands:
 .nf
 .sp
-Key Tab    A M  SendToModule FvwmProxy Circulate ScanForWindow East South (CurrentPage)
-Key Tab    A SM SendToModule FvwmProxy Circulate ScanForWindow West North (CurrentPage)
+    Key Tab A M SendToModule FvwmProxy Circulate \\
+        ScanForWindow East South (CurrentPage)
+    Key Tab A SM SendToModule FvwmProxy Circulate \\
+        ScanForWindow West North (CurrentPage)
 
-*FvwmProxy: Action ModifierRelease M SendToModule FvwmProxy Hide
+    *FvwmProxy: Action ModifierRelease M SendToModule FvwmProxy Hide
 .sp
 .fi
+But Meta-Shift-Tab can be awkward, so Meta-Q may be a better alternative.
+.nf
+.sp
+    Key Q A M SendToModule FvwmProxy Circulate \\
+        ScanForWindow West North (CurrentPage)
+.sp
+.fi
+
 You might consider adding !Sticky to the (CurrentPage) conditional if you
 use Sticky for low-interactivity programs, like load meters and music players.
 
 To have the proxies immediately pop up when you hold the Alt key, add
 .nf
 .sp
-Key Meta_L A N  SendToModule FvwmProxy Show
+    Key Meta_L A N SendToModule FvwmProxy Show
 .sp
 .fi
 If that's too intrusive, you can assign Alt-Esc to switch the proxies
 on and off by adding
 .nf
 .sp
-Key Escape A M  SendToModule FvwmProxy ShowToggle
+    Key Escape A M SendToModule FvwmProxy ShowToggle
 .sp
 .fi
 Some platforms have problems where general Alt key combinations becoming
@@ -204,17 +223,17 @@ To have the mouse jump to the center instead of the upper left corner,
 try adding
 .nf
 .sp
-AddToFunc WindowListFunc
-+ I WarpToWindow 50 50
+    AddToFunc WindowListFunc
+    + I WarpToWindow 50 50
 .sp
 .fi
 or just make your own list function from scratch, for example
 .nf
 .sp
-DestroyFunc WindowListFunc
-AddToFunc WindowListFunc
-+ I WindowId $[w.id] Raise
-+ I WindowId $[w.id] WarpToWindow 50 50
+    DestroyFunc WindowListFunc
+    AddToFunc WindowListFunc
+    + I WindowId $[w.id] Raise
+    + I WindowId $[w.id] WarpToWindow 50 50
 .sp
 .fi
 
@@ -222,6 +241,21 @@ Note that the default configuration does not activate any Next/Prev operations
 for Alt-Tab since that sequence is, by default, used by another module.
 Adding appropriate key mappings to your .fvwm2rc will switch this
 responsibility to FvwmProxy.
+
+If you use ProxyIconified, you might consider adding Iconify actions.
+.nf
+.sp
+    AddToFunc WindowListFunc
+    + I WindowId $[w.id] Iconify Off
+
+    AddToFunc Raise-and-Deiconify
+    + I WindowId $[w.id] Raise
+    + I WindowId $[w.id] Iconify Off
+
+    *FvwmProxy: Action Click1 Raise-and-Deiconify
+    *FvwmProxy: Action Click2 Iconify
+.sp
+.fi
 
 .SH AUTHOR
 Jason Weber
